infra/k8s/expiration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: gkibria121/expiration
        imagePullPolicy: Never
        resources:
          requests:
              memory: "256Mi"
              cpu: "500m" 
          limits:
            memory: "512Mi"
            cpu: "500m"
