infra/k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: gkibria121/auth
        imagePullPolicy: Never
        resources:
          requests:
              memory: "256Mi"
              cpu: "500m" 
          limits:
            memory: "512Mi"
            cpu: "500m" 
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec: 
  selector:
    app: auth
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth-depl
spec:
  selector:
    matchLabels:
      app: mongodb-auth
  template:
    metadata:
      labels:
        app: mongodb-auth
    spec:
      containers:
      - name: mongodb
        image: mongo 
        resources:
          requests:
              memory: "256Mi"
              cpu: "500m" 
          limits:
            memory: "512Mi"
            cpu: "500m" 
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-auth
spec: 
  selector:
    app: mongodb-auth
  ports:
  - port: 27017
    targetPort: 27017
