infra/k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: gkibria121/microservices-project-2-client
        # imagePullPolicy: Never 
        resources:
          requests:
              memory: "256Mi"
              cpu: "500m" 
          limits:
            memory: "512Mi"
            cpu: "500m" 
---

apiVersion: v1
kind: Service
metadata:
  name: client-service
spec: 
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
