infra/k8s/payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: gkibria121/payment
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-payment-depl
spec:
  selector:
    matchLabels:
      app: mongodb-payments
  template:
    metadata:
      labels:
        app: mongodb-payments
    spec:
      containers:
      - name: mongodb
        image: mongo 
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m" 
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-payments
spec: 
  selector:
    app: mongodb-payments
  ports:
  - port: 27017
    targetPort: 27017
