infra/k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis  
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m" 
---
 
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec: 
  selector:
    app: redis-depl
  ports:
  - port: 6379
    targetPort: 6379
