infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv 
spec:
  ingressClassName: nginx
  rules:
  - host: ticksell.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api/auth"
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-service
            port: 
              number: 3000
